# carteira-inteligente

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  FINAL_REPORT.md  IMPLEMENTACAO_COMPLETA.md  IMPLEMENTATION_REPORT.md  MARKET_DATA_API.md  PROJECT_COMPLETE_SUMMARY.md  PROXIMOS_PASSOS.md  QUICKSTART.md  README.md  SERVIDOR_RODANDO.md  SUMMARY.md  TESTING.md  create_fake_note.py  exemplo_transacoes.csv  package-lock.json  package.json  prd.md  pyproject.toml  requirements.txt  result_prices.json  supabase_pf_tables.sql  supabase_schema_v2.sql  supabase_update.sql  turbo.json  vercel.json
apps/api/: .env.example  .flake8  check_models.py  debug_users.py  index.py  main.py  pyproject.toml  pytest.ini  requirements.txt  schema.sql
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20251001_2339_09e281a1055f_add_notifications_table.py  20260112_1157_06689bde056a_add_created_at_to_transactions.py  20260112_1306_4c5be83baaed_add_fixed_income_investments_table.py  20260112_1354_757aeb324ba0_add_notifications_table.py  20260112_2036_f34040365de8_add_personal_finance_tables.py  20260114_1632_32444dfd29d2_increase_asset_ticker_length.py  add_portfolio_models.py
apps/api/app/: __init__.py
apps/api/app/core/: config.py  database.py  deps.py  logging.py  middleware.py  security.py
apps/api/app/models/: asset.py  cei_credentials.py  fixed_income.py  notification.py  personal_finance.py  position.py  proceed.py  transaction.py  user.py
apps/api/app/routes/: analytics.py  auth.py  cei.py  fixed_income.py  health.py  market.py  notifications.py  personal_finance.py  personal_finance_analytics_snippet.py  portfolio.py  portfolio_manage.py
apps/api/app/schemas/: asset.py  cei.py  notification.py  personal_finance.py  position.py  proceed.py  transaction.py  user.py
apps/api/tests/: conftest.py  test_auth.py  test_brapi.py  test_cei.py  test_health.py  test_notifications.py  test_portfolio.py
(+94 files in other folders)
