[project]
name = "carteira-inteligente-api"
version = "1.0.0"
description = "API for Carteira Inteligente"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.28",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "pydantic[email]==2.6.3",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "python-dateutil==2.9.0",
    "psutil",
    "google-generativeai==0.8.3",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | alembic/versions
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

